<resources>
    <string name="app_name">TicTacToe</string>
    <string name="tictac">TicTac</string>
    <string name="toe">Toe</string>
    <string name="player1">Player1:</string>
    <string name="player2">Player2:</string>
    <string name="startScore">0</string>
    <string name="start1">Play with another player</string>
    <string name="start2">Play with computer</string>
    <string name="settings">Settings</string>
    <string name="computer">Computer:</string>
    <string name="darkMode">Dark Mode</string>
    <string name="music">Audio</string>
    <string name="firstCase">2 of 3</string>
    <string name="secondCase">4 of 5</string>
    <string name="thirdCase">7 of 8</string>
    <string name="gameMode">Game Mode:</string>
    <string name="playAgain">Play Again!</string>
    <string name="goMainPage">Go to Start Page!</string>
</resources>