<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDarkMode"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/oval_background"
        android:text="@string/darkMode"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchMusic"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/oval_background"
        android:text="@string/music"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/switchDarkMode"
        app:layout_constraintStart_toStartOf="@id/switchDarkMode"
        app:layout_constraintTop_toBottomOf="@id/switchDarkMode" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/oval_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gameMode"
        app:layout_constraintTop_toBottomOf="@+id/gameMode">

        <RadioButton
            android:id="@+id/firstCase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/firstCase"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/secondCase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/secondCase"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/thirdCase"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:text="@string/thirdCase"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/gameMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/gameMode"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/switchMusic"
        app:layout_constraintTop_toBottomOf="@+id/switchMusic" />


</androidx.constraintlayout.widget.ConstraintLayout>