<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:context=".MainActivity">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />
        </TableRow>

        <TableRow
            android:layout_width="40pt"
            android:layout_height="40pt"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_margin="5dp"
                android:background="@color/colorPrimaryLight"
                android:onClick="pressButton"
                android:textColor="@android:color/background_dark"
                android:textSize="64sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/player1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/player2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/player2Score"
        app:layout_constraintEnd_toStartOf="@+id/player2Score"
        app:layout_constraintTop_toTopOf="@+id/player2Score" />

    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/startScore"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/player1"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:layout_constraintTop_toTopOf="@+id/player1" />

    <TextView
        android:id="@+id/player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/startScore"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>
